--- a/public/assets/sass/style.scss
+++ b/public/assets/sass/style.scss
@@ -1,6 +1,2 @@
 @import "custom/home";
-@import "custom/header";
-@import "custom/footer";
-@import "custom/container";
-@import "custom/exchange";
-@import "custom/compare";
+@import "custom/404";
