--- a/public/assets/sass/index.css
+++ b/public/assets/sass/index.css
@@ -1,57 +1,124 @@
+@import url(https://fonts.googleapis.com/css?family=Merriweather+Sans);
 .section-home-content {
-  margin-top: 20%;
+  display: flex;
+  margin-top: 10%;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 a {
   text-decoration: none;
 }
 
-.footer {
-  margin-top: 200px;
+main {
+  text-align: center;
 }
-
-.container {
+main svg {
   width: 100%;
-  padding-right: 15px;
-  padding-left: 15px;
-  margin-right: auto;
-  margin-left: auto;
 }
 
-@media (min-width: 576px) {
-  .container {
-    max-width: 540px;
+main #errorText {
+  font-size: 22px;
+  margin: 14px 0;
+}
+
+main #errorLink {
+  font-size: 20px;
+  padding: 12px;
+  border: 1px solid;
+  color: #000;
+  background-color: transparent;
+  text-decoration: none;
+  transition: all 0.5s ease-in-out;
+}
+
+main #errorLink:active, main #errorLink:hover {
+  color: #fff;
+  background: #000;
+}
+
+main #g6219 {
+  transform-origin: 85px 4px;
+  -webkit-animation: an1 12s 0.5s infinite ease-out;
+  animation: an1 12s 0.5s infinite ease-out;
+}
+
+@-webkit-keyframes an1 {
+  0% {
+    transform: rotate(0);
+  }
+  5% {
+    transform: rotate(3deg);
+  }
+  15% {
+    transform: rotate(-2.5deg);
+  }
+  25% {
+    transform: rotate(2deg);
+  }
+  35% {
+    transform: rotate(-1.5deg);
+  }
+  45% {
+    transform: rotate(1deg);
+  }
+  55% {
+    transform: rotate(-1.5deg);
+  }
+  65% {
+    transform: rotate(2deg);
+  }
+  75% {
+    transform: rotate(-2deg);
+  }
+  85% {
+    transform: rotate(2.5deg);
+  }
+  95% {
+    transform: rotate(-3deg);
+  }
+  100% {
+    transform: rotate(0);
   }
 }
-@media (min-width: 768px) {
-  .container {
-    max-width: 720px;
+@keyframes an1 {
+  0% {
+    transform: rotate(0);
   }
-}
-@media (min-width: 992px) {
-  .container {
-    max-width: 960px;
+  5% {
+    transform: rotate(3deg);
   }
-}
-@media (min-width: 1200px) {
-  .container {
-    max-width: 1140px;
+  15% {
+    transform: rotate(-2.5deg);
   }
-}
-.compare {
-  display: grid;
-  grid-template-columns: 30% 70%;
-  grid-template-areas: "D T";
-  grid-gap: 1rem;
-}
-.compare .devise-select-list {
-  grid-area: D;
-  padding: 10px;
-  border-radius: 20px;
-  box-shadow: 0 10px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-.compare .best-price-table {
-  grid-area: T;
+  25% {
+    transform: rotate(2deg);
+  }
+  35% {
+    transform: rotate(-1.5deg);
+  }
+  45% {
+    transform: rotate(1deg);
+  }
+  55% {
+    transform: rotate(-1.5deg);
+  }
+  65% {
+    transform: rotate(2deg);
+  }
+  75% {
+    transform: rotate(-2deg);
+  }
+  85% {
+    transform: rotate(2.5deg);
+  }
+  95% {
+    transform: rotate(-3deg);
+  }
+  100% {
+    transform: rotate(0);
+  }
 }
 
 /*# sourceMappingURL=index.css.map */
